--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "lodash": ">=1.3.1",
         "dox": "0.4.x",
         "express": "3.x.x",
-        "q": ">=0.9.7"
+        "q": ">=0.9.7",
+        "debug": "~=0.7.2"
     },
     "bugs": {
         "url": "https://github.com/oleksiyk/express-bridge/issues"
