--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "lodash": ">=1.3.1",
         "dox": "0.4.x",
         "express": "3.x.x",
-        "q": ">=0.9.7",
+        "bluebird": "~0.11.*",
         "debug": "~=0.7.2"
     },
     "bugs": {
