--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "version": "0.0.1",
     "main": "./lib/express.js",
     "dependencies": {
-        "lodash": ">=1.3.1",
+        "lodash": "~=2.4.0",
         "dox": "0.4.x",
         "express": "3.x.x",
-        "bluebird": "~0.11.*",
+        "bluebird": "~1.0.0",
         "debug": "~=0.7.2"
     },
     "bugs": {
